finished thru bst