@@ -22,8 +22,23 @@ public class IntervalsUnion {
     }
 
     public static List<Interval> unionOfIntervals(List<Interval> intervals) {
-        // TODO - you fill in here.
-        return Collections.emptyList();
+        if (intervals.isEmpty()) return Collections.emptyList();
+        intervals.sort((a, b) -> {
+            return a.left.val != b.left.val ? a.left.val - b.left.val : a.left.isClosed &&
+                    !b.left.isClosed ? -1 : !a.left.isClosed && b.left.isClosed ? 1 : 0;
+        });
+        List<Interval> result = new ArrayList<>(List.of(intervals.get(0)));
+        for (Interval i : intervals) {
+            if (!result.isEmpty() && (i.left.val < result.get(result.size() - 1).right.val ||
+                    (i.left.val == result.get(result.size() - 1).right.val &&
+                    (i.left.isClosed || result.get(result.size() - 1).right.isClosed)))) {
+                if (i.right.val > result.get(result.size() - 1).right.val ||
+                        (i.right.val == result.get(result.size() - 1).right.val && i.right.isClosed)) {
+                    result.get(result.size() - 1).right = i.right;
+                }
+            } else result.add(i);
+        }
+        return result;
     }
 
     @EpiUserType(
